--- a/lang.cabal
+++ b/lang.cabal
@@ -25,13 +25,21 @@ source-repository head
 
 library
   exposed-modules:
+      Eval.Heap
+      Indices
       Lib
+      Syntax
+      Types
+      Typing.Check
+      Typing.Env
   other-modules:
       Paths_lang
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , containers
+    , text
   default-language: Haskell2010
 
 executable lang-exe
@@ -43,7 +51,9 @@ executable lang-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
     , lang
+    , text
   default-language: Haskell2010
 
 test-suite lang-test
@@ -56,5 +66,7 @@ test-suite lang-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
     , lang
+    , text
   default-language: Haskell2010
