--- a/lang.cabal
+++ b/lang.cabal
@@ -39,7 +39,9 @@ library
   build-depends:
       base >=4.7 && <5
     , containers
+    , mtl
     , text
+    , transformers
   default-language: Haskell2010
 
 executable lang-exe
@@ -53,13 +55,16 @@ executable lang-exe
       base >=4.7 && <5
     , containers
     , lang
+    , mtl
     , text
+    , transformers
   default-language: Haskell2010
 
 test-suite lang-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Typing
       Paths_lang
   hs-source-dirs:
       test
@@ -68,5 +73,7 @@ test-suite lang-test
       base >=4.7 && <5
     , containers
     , lang
+    , mtl
     , text
+    , transformers
   default-language: Haskell2010
