--- a/lang.cabal
+++ b/lang.cabal
@@ -25,11 +25,15 @@ source-repository head
 
 library
   exposed-modules:
+      Env
+      Eval.Eval
       Eval.Heap
+      Eval.State
       Indices
       Lib
       Syntax
       Types
+      Typing.BetterEnv
       Typing.Check
       Typing.Env
   other-modules:
