--- a/lang.cabal
+++ b/lang.cabal
@@ -25,12 +25,15 @@ source-repository head
 
 library
   exposed-modules:
+      Language.BorrowLang.App
       Language.BorrowLang.Env
       Language.BorrowLang.Indices
       Language.BorrowLang.Interpreter.Eval
       Language.BorrowLang.Interpreter.Heap
       Language.BorrowLang.Interpreter.Store
       Language.BorrowLang.Interpreter.Values
+      Language.BorrowLang.Parser.Parser
+      Language.BorrowLang.Parser.ParserEnv
       Language.BorrowLang.Syntax
       Language.BorrowLang.Types
       Language.BorrowLang.Typing.Check
@@ -42,7 +45,9 @@ library
   build-depends:
       base >=4.7 && <5
     , containers
+    , megaparsec
     , mtl
+    , parser-combinators
     , text
     , transformers
   default-language: Haskell2010
@@ -58,7 +63,9 @@ executable lang-exe
       base >=4.7 && <5
     , containers
     , lang
+    , megaparsec
     , mtl
+    , parser-combinators
     , text
     , transformers
   default-language: Haskell2010
@@ -76,7 +83,9 @@ test-suite lang-test
       base >=4.7 && <5
     , containers
     , lang
+    , megaparsec
     , mtl
+    , parser-combinators
     , text
     , transformers
   default-language: Haskell2010
